<resources>
    <string name="app_name">挑战高薪</string>
    <string name="login_title">挑战高薪</string>
    <string name="repwd_title">忘记密码</string>
    <string name="talent_title">人才</string>
    <string name="add_position_title">发布职位</string>
    <string name="messages_title">消息</string>

    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以加载</string>
    <string name="pull_to_refresh_header_hint_ready">松开后加载</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>

    <string name="net_error">网络错误,请重试!</string>
    <string name="login_error">账户或密码错误</string>
    <!--登录-->
    <string name="login_tv_phone">+86</string>
    <string name="login_et_phone">请输入手机号</string>
    <string name="login_et_password">请输入密码</string>
    <string name="login_bt_fotgetpass">忘记密码</string>
    <string name="login_bt_register">立即注册</string>
    <string name="login_bt_qq">QQ</string>
    <string name="login_bt_weixin">微信</string>
    <string name="login_bt_xinlang">微博</string>
    <!--注册-->
    <string name="register_title_top">账户注册</string>
    <string name="register_et_code">请输入验证码</string>
    <string name="register_et_password">请输入新密码</string>
    <string name="register_tv_code">验证码</string>
    <string name="register_tv_pass">密\t\t码</string>
    <string name="register_btn_personal">用户协议</string>
    <string name="register_btn_code">获取验证码</string>
    <!--忘记密码-->
    <string name="forget_title_top">忘记密码</string>
    <string name="forget_sure_pass">密码确认</string>
    <string name="register_et_newpass">请重新输入新密码</string>

    <!--新加-->
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>




</resources>
